@@ -1,11 +1,12 @@
 // src/main/java/com/suportflow/backend/config/SecurityConfig.java
 package com.suportflow.backend.config;
 
-import com.suportflow.backend.repository.ClienteRepository;
-import com.suportflow.backend.repository.UserRepository;
+import com.suportflow.backend.security.JwtAuthenticationEntryPoint; // Import!
 import com.suportflow.backend.security.JwtAuthenticationFilter;
-import com.suportflow.backend.service.auth.ClienteDetailsService;
+import com.suportflow.backend.service.auth.AuthenticationHelper;
 import com.suportflow.backend.service.auth.UserDetailsServiceImpl;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -25,92 +26,95 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
-import java.util.List;
-import com.suportflow.backend.service.auth.AuthenticationHelper;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity // Enables @PreAuthorize, @PostAuthorize, etc.
+@EnableMethodSecurity
 public class SecurityConfig {
 
-    @Autowired
-    private JwtAuthenticationFilter jwtAuthenticationFilter;
+  @Autowired private JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    @Autowired
-    private UserDetailsServiceImpl userDetailsService;
+  @Autowired private UserDetailsServiceImpl userDetailsService;
 
-    //@Autowired  <- REMOVE THIS!
-    //private ClienteDetailsService clienteDetailsService;
+  @Autowired private PasswordEncoder passwordEncoder;
 
-    @Autowired
-    private PasswordEncoder passwordEncoder;
+  @Autowired private AuthenticationHelper authenticationHelper;
 
-    @Autowired
-    private AuthenticationHelper authenticationHelper;
+  @Autowired private JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint; // Inject
 
+  @Bean
+  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    http.csrf(AbstractHttpConfigurer::disable)
+        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        .authorizeHttpRequests(
+            auth ->
+                auth.requestMatchers("/api/auth/**", "/swagger-ui/**", "/v3/api-docs/**")
+                    .permitAll()
+                    .requestMatchers("/h2-console/**")
+                    .permitAll()
+                    .requestMatchers("/api/clientes/**")
+                    .permitAll()
+                    .requestMatchers("/api/chamados/**")
+                    .authenticated() // Secure Chamados
+                    .requestMatchers("/api/permissoes/**")
+                    .permitAll()
+                    .anyRequest()
+                    .authenticated()) // All other requests require authentication
+        .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .exceptionHandling(
+            handling ->
+                handling.authenticationEntryPoint(
+                    jwtAuthenticationEntryPoint)) // ADD THIS LINE (AuthenticationEntryPoint)
+        .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll() // Allow all requests to /api/auth/...
-                        .requestMatchers("/h2-console/**").permitAll()  // Allow access to H2 console (for development)
-                        .requestMatchers("/api/clientes/**").authenticated() // Secure all Cliente endpoints
-                        .requestMatchers("/api/chamados/**").authenticated() // Secure all Chamados endpoints
-                        .requestMatchers("/api/permissoes/**").authenticated() // Secure all permissoes endpoints
-                        .anyRequest().authenticated() // All other requests require authentication
-                )
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Use stateless sessions
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class); // Add JWT filter
+    http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()));
 
-        http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable())); // Disable frame options (for H2 console)
+    return http.build();
+  }
 
-        return http.build();
-    }
+  // Remove @Autowired here!
+  public void configureGlobal(AuthenticationManagerBuilder auth) throws Exception {
+    auth.authenticationProvider(userAuthenticationProvider())
+        .authenticationProvider(clienteAuthenticationProvider(authenticationHelper));
+  }
 
-    // Remove @Autowired here!
-    public void configureGlobal(AuthenticationManagerBuilder auth) throws Exception {
-        auth.authenticationProvider(userAuthenticationProvider())
-                .authenticationProvider(clienteAuthenticationProvider(authenticationHelper));
-    }
+  @Bean
+  public AuthenticationProvider userAuthenticationProvider() {
+    DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+    authProvider.setUserDetailsService(userDetailsService);
+    authProvider.setPasswordEncoder(passwordEncoder);
+    return authProvider;
+  }
 
-    @Bean
-    public AuthenticationProvider userAuthenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder);
-        return authProvider;
-    }
-
-    @Bean
-    public AuthenticationProvider clienteAuthenticationProvider(AuthenticationHelper authenticationHelper) {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(clienteDetailsService -> {
-            // This UserDetailsService implementation is used for authentication
-            // It uses the AuthenticationHelper to authenticate the client
-            // and build the UserDetails object.
-            return authenticationHelper.authenticateCliente(clienteDetailsService, "");
+  @Bean
+  public AuthenticationProvider clienteAuthenticationProvider(
+      AuthenticationHelper authenticationHelper) {
+    DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+    authProvider.setUserDetailsService(
+        clienteDetailsService -> {
+          // This UserDetailsService implementation is used for authentication
+          // It uses the AuthenticationHelper to authenticate the client
+          // and build the UserDetails object.
+          return authenticationHelper.authenticateCliente(clienteDetailsService, "");
         });
-        authProvider.setPasswordEncoder(passwordEncoder);
-        return authProvider;
-    }
+    authProvider.setPasswordEncoder(passwordEncoder);
+    return authProvider;
+  }
 
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
-    }
+  @Bean
+  public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+    return config.getAuthenticationManager();
+  }
 
-    @Bean
-    CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+  @Bean
+  CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+    configuration.setAllowedOrigins(List.of("*"));
+    configuration.setAllowedMethods(
+        Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+    configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration);
+    return source;
+  }
 }
